DEAR-98 adjust tests