@@ -9,6 +9,7 @@ import ch.fhnw.deardevbackend.dto.TeamHappinessInsightDTO;
 import ch.fhnw.deardevbackend.dto.TeamWorkKindInsightDTO;
 import ch.fhnw.deardevbackend.dto.WorkKindInsightDTO;
 import ch.fhnw.deardevbackend.mapper.HappinessInsightMapper;
+import ch.fhnw.deardevbackend.mapper.WorkKindInsightMapper;
 import ch.fhnw.deardevbackend.repositories.InsightsRepository;
 import ch.fhnw.deardevbackend.repositories.HappinessSurveyRepository;
 import ch.fhnw.deardevbackend.repositories.TeamMemberRepository;
@@ -39,6 +40,9 @@ public class InsightsServiceTest {
 
     @Mock
     private HappinessInsightMapper happinessInsightMapper;
+
+    @Mock
+    private WorkKindInsightMapper workKindInsightMapper;
 
     private Integer userId;
     private List<Object[]> userAverages;
@@ -84,7 +88,7 @@ public class InsightsServiceTest {
 
         when(teamMemberRepository.findTeamIdByUserId(userId)).thenReturn(teamIds);
         when(happinessSurveyRepository.findDailyAveragesByUserId(userId)).thenReturn(userAverages);
-        when(insightsRepository.findTeamDailyAveragesExcludingUser(userId)).thenReturn(teamAverages);
+        when(insightsRepository.findTeamDailyAveragesExcludingUser(1, userId)).thenReturn(teamAverages);
 
         when(happinessInsightMapper.toDTO("2024-07-27", 5.0, 4.0)).thenReturn(new HappinessInsightDTO("2024-07-27", 5.0, 4.0));
         when(happinessInsightMapper.toDTO("2024-07-28", 5.0, 2.0)).thenReturn(new HappinessInsightDTO("2024-07-28", 5.0, 2.0));
@@ -94,21 +98,21 @@ public class InsightsServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(1, result.get(0).getTeamId());
-        assertEquals(3, result.get(0).getInsights().size());
-        assertEquals("2024-07-27", result.get(0).getInsights().get(0).getDay());
-        assertEquals(5.0, result.get(0).getInsights().get(0).getUserAverage());
-        assertEquals(4.0, result.get(0).getInsights().get(0).getTeamAverage());
-        assertEquals("2024-07-28", result.get(0).getInsights().get(1).getDay());
-        assertEquals(5.0, result.get(0).getInsights().get(1).getUserAverage());
-        assertEquals(2.0, result.get(0).getInsights().get(1).getTeamAverage());
-        assertEquals("2024-07-29", result.get(0).getInsights().get(2).getDay());
-        assertEquals(6.0, result.get(0).getInsights().get(2).getUserAverage());
-        assertEquals(3.0, result.get(0).getInsights().get(2).getTeamAverage());
+        assertEquals(1, result.getFirst().getTeamId());
+        assertEquals(3, result.getFirst().getInsights().size());
+        assertEquals("2024-07-27", result.getFirst().getInsights().getFirst().getDay());
+        assertEquals(5.0, result.getFirst().getInsights().getFirst().getUserAverage());
+        assertEquals(4.0, result.getFirst().getInsights().getFirst().getTeamAverage());
+        assertEquals("2024-07-28", result.getFirst().getInsights().get(1).getDay());
+        assertEquals(5.0, result.getFirst().getInsights().get(1).getUserAverage());
+        assertEquals(2.0, result.getFirst().getInsights().get(1).getTeamAverage());
+        assertEquals("2024-07-29", result.getFirst().getInsights().get(2).getDay());
+        assertEquals(6.0, result.getFirst().getInsights().get(2).getUserAverage());
+        assertEquals(3.0, result.getFirst().getInsights().get(2).getTeamAverage());
 
         verify(teamMemberRepository, times(1)).findTeamIdByUserId(userId);
         verify(happinessSurveyRepository, times(1)).findDailyAveragesByUserId(userId);
-        verify(insightsRepository, times(1)).findTeamDailyAveragesExcludingUser(userId);
+        verify(insightsRepository, times(1)).findTeamDailyAveragesExcludingUser(1, userId);
         verify(happinessInsightMapper, times(3)).toDTO(anyString(), anyDouble(), anyDouble());
     }
 
@@ -118,7 +122,8 @@ public class InsightsServiceTest {
 
         when(teamMemberRepository.findTeamIdByUserId(userId)).thenReturn(teamIds);
         when(happinessSurveyRepository.findDailyAveragesByUserId(userId)).thenReturn(userAverages);
-        when(insightsRepository.findTeamDailyAveragesExcludingUser(userId)).thenReturn(teamAverages);
+        when(insightsRepository.findTeamDailyAveragesExcludingUser(1, userId)).thenReturn(teamAverages);
+        when(insightsRepository.findTeamDailyAveragesExcludingUser(2, userId)).thenReturn(teamAverages);
 
         when(happinessInsightMapper.toDTO("2024-07-27", 5.0, 4.0)).thenReturn(new HappinessInsightDTO("2024-07-27", 5.0, 4.0));
         when(happinessInsightMapper.toDTO("2024-07-28", 5.0, 2.0)).thenReturn(new HappinessInsightDTO("2024-07-28", 5.0, 2.0));
@@ -130,24 +135,24 @@ public class InsightsServiceTest {
         assertEquals(2, result.size());
 
         // Team 1 Assertions
-        assertEquals(1, result.get(0).getTeamId());
-        assertEquals(3, result.get(0).getInsights().size());
-        assertEquals("2024-07-27", result.get(0).getInsights().get(0).getDay());
-        assertEquals(5.0, result.get(0).getInsights().get(0).getUserAverage());
-        assertEquals(4.0, result.get(0).getInsights().get(0).getTeamAverage());
-        assertEquals("2024-07-28", result.get(0).getInsights().get(1).getDay());
-        assertEquals(5.0, result.get(0).getInsights().get(1).getUserAverage());
-        assertEquals(2.0, result.get(0).getInsights().get(1).getTeamAverage());
-        assertEquals("2024-07-29", result.get(0).getInsights().get(2).getDay());
-        assertEquals(6.0, result.get(0).getInsights().get(2).getUserAverage());
-        assertEquals(3.0, result.get(0).getInsights().get(2).getTeamAverage());
+        assertEquals(1, result.getFirst().getTeamId());
+        assertEquals(3, result.getFirst().getInsights().size());
+        assertEquals("2024-07-27", result.getFirst().getInsights().getFirst().getDay());
+        assertEquals(5.0, result.getFirst().getInsights().getFirst().getUserAverage());
+        assertEquals(4.0, result.getFirst().getInsights().getFirst().getTeamAverage());
+        assertEquals("2024-07-28", result.getFirst().getInsights().get(1).getDay());
+        assertEquals(5.0, result.getFirst().getInsights().get(1).getUserAverage());
+        assertEquals(2.0, result.getFirst().getInsights().get(1).getTeamAverage());
+        assertEquals("2024-07-29", result.getFirst().getInsights().get(2).getDay());
+        assertEquals(6.0, result.getFirst().getInsights().get(2).getUserAverage());
+        assertEquals(3.0, result.getFirst().getInsights().get(2).getTeamAverage());
 
         // Team 2 Assertions
         assertEquals(2, result.get(1).getTeamId());
         assertEquals(3, result.get(1).getInsights().size());
-        assertEquals("2024-07-27", result.get(1).getInsights().get(0).getDay());
-        assertEquals(5.0, result.get(1).getInsights().get(0).getUserAverage());
-        assertEquals(4.0, result.get(1).getInsights().get(0).getTeamAverage());
+        assertEquals("2024-07-27", result.get(1).getInsights().getFirst().getDay());
+        assertEquals(5.0, result.get(1).getInsights().getFirst().getUserAverage());
+        assertEquals(4.0, result.get(1).getInsights().getFirst().getTeamAverage());
         assertEquals("2024-07-28", result.get(1).getInsights().get(1).getDay());
         assertEquals(5.0, result.get(1).getInsights().get(1).getUserAverage());
         assertEquals(2.0, result.get(1).getInsights().get(1).getTeamAverage());
@@ -156,14 +161,19 @@ public class InsightsServiceTest {
         assertEquals(3.0, result.get(1).getInsights().get(2).getTeamAverage());
 
         verify(teamMemberRepository, times(1)).findTeamIdByUserId(userId);
-        verify(happinessSurveyRepository, times(1)).findDailyAveragesByUserId(userId);
-        verify(insightsRepository, times(1)).findTeamDailyAveragesExcludingUser(userId);
-        verify(happinessInsightMapper, times(3)).toDTO(anyString(), anyDouble(), anyDouble());
+        verify(happinessSurveyRepository, times(2)).findDailyAveragesByUserId(userId);
+        verify(insightsRepository, times(1)).findTeamDailyAveragesExcludingUser(1, userId);
+        verify(insightsRepository, times(1)).findTeamDailyAveragesExcludingUser(2, userId);
+        verify(happinessInsightMapper, times(6)).toDTO(anyString(), anyDouble(), anyDouble());
     }
 
     @Test
     void getWorkKindHappinessByUserId_success() {
         when(insightsRepository.findWorkKindHappinessByUserId(userId)).thenReturn(workKindHappinessData);
+        when(workKindInsightMapper.toDTO(1, 1, "Development", 4.5, 10L)).thenReturn(workKindInsightDTO1);
+        when(workKindInsightMapper.toDTO(1, 2, "Testing", 3.5, 5L)).thenReturn(workKindInsightDTO2);
+        when(workKindInsightMapper.toDTO(2, 1, "Development", 4.0, 8L)).thenReturn(workKindInsightDTO3);
+        when(workKindInsightMapper.toDTO(2, 2, "Testing", 3.0, 6L)).thenReturn(workKindInsightDTO4);
 
         List<TeamWorkKindInsightDTO> result = insightsService.getWorkKindHappinessByUserId(userId);
 
@@ -172,7 +182,7 @@ public class InsightsServiceTest {
         List<WorkKindInsightDTO> team1Insights = Arrays.asList(workKindInsightDTO1, workKindInsightDTO2);
         List<WorkKindInsightDTO> team2Insights = Arrays.asList(workKindInsightDTO3, workKindInsightDTO4);
 
-        assertEquals(new TeamWorkKindInsightDTO(1, team1Insights), result.get(0));
+        assertEquals(new TeamWorkKindInsightDTO(1, team1Insights), result.getFirst());
         assertEquals(new TeamWorkKindInsightDTO(2, team2Insights), result.get(1));
     }
 }
